[gd_scene load_steps=10 format=3 uid="uid://clj5cr27uhuck"]

[ext_resource type="PackedScene" uid="uid://giax34qinv16" path="res://Scenes & Scripts/Player/player1.tscn" id="1_b2bso"]
[ext_resource type="Script" uid="uid://dbx08l1hrypc1" path="res://Scenes & Scripts/Player/character_manager.gd" id="1_cb3pd"]
[ext_resource type="PackedScene" uid="uid://cpu4tlsx84nis" path="res://Scenes & Scripts/Player/player2.tscn" id="2_cb3pd"]
[ext_resource type="Texture2D" uid="uid://bx43e3qh6e0ji" path="res://Assets/Artwork/Characters/Arm Pieces/IMG_2464.PNG" id="4_ehnq1"]
[ext_resource type="Script" uid="uid://bd3kg6p2sq6yh" path="res://Scenes & Scripts/Modular/custom_line_2d.gd" id="5_2vhg5"]
[ext_resource type="Texture2D" uid="uid://caly50374jse3" path="res://Assets/Artwork/Characters/Arm Pieces/Fixed Arm Pieces/IMG_2465.png" id="6_gyqcu"]
[ext_resource type="Texture2D" uid="uid://13iag4ebmsjs" path="res://Assets/Artwork/Characters/Arm Pieces/Fixed Arm Pieces/IMG_2464.png" id="7_6e5qs"]
[ext_resource type="Texture2D" uid="uid://sthhlrih2faa" path="res://Assets/Artwork/Characters/Arm Pieces/Fixed Arm Pieces/IMG_2467.png" id="8_xkihb"]
[ext_resource type="Texture2D" uid="uid://bnkw20kv4vnci" path="res://Assets/Artwork/Characters/Arm Pieces/Fixed Arm Pieces/IMG_2466.png" id="9_5tp2r"]

[node name="CharacterManager" type="Node2D"]
script = ExtResource("1_cb3pd")
min_zoom = 1.0
max_zoom = 2.0
max_travel_distance = 200.0
rope_strength = 30.0
swing_apex_free_time = 0.3
swing_apex_speed_threshold = 300.0
swing_apex_jump_velocity = -700.0
swing_apex_pop_horizontal = 300.0
swing_apex_retrigger_lock = 1.0
apex_min_angle_from_vertical_deg = 85.0
rope_climb_enabled = false
rope_climb_limit = 50.0

[node name="Player1" parent="." instance=ExtResource("1_b2bso")]
z_index = 3
position = Vector2(-20, 0)
other_player_path = NodePath("../Player2")

[node name="P1MindistanceMarker2D" type="Marker2D" parent="Player1"]
position = Vector2(2, -8)

[node name="RopeSwingCenterP1Marker2D" type="Marker2D" parent="Player1"]
position = Vector2(1, 113)

[node name="Player2" parent="." instance=ExtResource("2_cb3pd")]
z_index = 3
position = Vector2(16, 0)
other_player_path = NodePath("../Player1")

[node name="P2MindistanceMarker2D" type="Marker2D" parent="Player2"]
position = Vector2(-7, -8)

[node name="RopeSwingCenterP2Marker2D" type="Marker2D" parent="Player2"]
position = Vector2(1, 113)

[node name="Gameplay" type="Node2D" parent="."]

[node name="MainCamera2D" type="Camera2D" parent="Gameplay"]
zoom = Vector2(2, 2)

[node name="Line2D" type="Line2D" parent="Gameplay"]
z_index = 2
texture = ExtResource("4_ehnq1")
texture_mode = 1
script = ExtResource("5_2vhg5")
cap_start = ExtResource("6_gyqcu")
mid = ExtResource("7_6e5qs")
cap_end_1 = ExtResource("8_xkihb")
cap_end_2 = ExtResource("9_5tp2r")
mid_tile_px = 0.0

[node name="ApexTimer" type="Timer" parent="Gameplay"]
wait_time = 0.8

[node name="LineCapBSprite2D" type="Sprite2D" parent="Gameplay"]
